--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,27 @@
 @import "tailwindcss/utilities";
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
+ ::-webkit-scrollbar-track
+ {
+     background-color: #F5F5F5;
+ }
+ 
+ ::-webkit-scrollbar
+ {
+     width: 11px;
+     background-color: #F5F5F5;
+ }
+
+ ::-webkit-scrollbar-thumb
+ {     background-image: -webkit-gradient(linear,
+                                    left bottom,
+                                    left top,
+                                   
+                                    color-stop(0.86, rgb(9, 97, 104)));  /* primary color */
+}
+
+body {
+    background-image: -webkit-gradient(linear, left top , right bottom, from(rgb(239, 252, 252)), to(white));
+}
